Change crawler to multiple threading

--- a/web/demo.html
+++ b/web/demo.html
@@ -31,6 +31,10 @@
 
 
         <div class="bodyPage">
+            <div class="categoryTrending">
+                <p>Chuột Chơi game</p>
+            </div>
+
             <div class="gridContainer">
                 <div class="gridProductItem">
                     <img class="productThumbnail" src="webcontent/images/product1.jpg"/>
@@ -67,12 +71,56 @@
                     <div class="productName">Ghế DXRacer King KF06-NW</div>
                     <div class="productPrice">8,880,000 đ</div>
                 </div>
-                <!--                <div class="gridProductItem">
-                                    <img class="productThumbnail"src="webcontent/images/product2.jpg"/>
-                                    <div class="productName">Ghế DXRacer King KF06-NW</div>
-                                    <div class="productPrice">8,880,000 đ</div>
-                                </div>-->
             </div>      
+
+
+            <div class="categoryTrending">
+                <p>Bàn Phím chơi game</p>
+            </div>
+
+            <div class="gridContainer">
+                <div class="gridProductItem">
+                    <img class="productThumbnail" src="webcontent/images/product1.jpg"/>
+                    <div class="productName">Ghế DXRacer King KF06-NW</div>
+                    <div class="productPrice">8,880,000 đ</div>
+                </div>
+                <div class="gridProductItem">
+                    <img class="productThumbnail" src="webcontent/images/product2.jpg"/>
+                    <div class="productName">Ghế DXRacer King KF06-NW</div>
+                    <div class="productPrice">8,880,000 đ</div>
+                </div>
+                <div class="gridProductItem">
+                    <img class="productThumbnail" src="webcontent/images/product1.jpg"/>
+                    <div class="productName">Ghế DXRacer King KF06-NW</div>
+                    <div class="productPrice">8,880,000 đ</div>
+                </div>
+                <div class="gridProductItem">
+                    <img class="productThumbnail"src="webcontent/images/product2.jpg"/>
+                    <div class="productName">Ghế DXRacer King KF06-NW</div>
+                    <div class="productPrice">8,880,000 đ</div>
+                </div>
+                <div class="gridProductItem">
+                    <img class="productThumbnail" src="webcontent/images/product1.jpg"/>
+                    <div class="productName">Ghế DXRacer King KF06-NW</div>
+                    <div class="productPrice">8,880,000 đ</div>
+                </div>
+                <div class="gridProductItem">
+                    <img class="productThumbnail" src="webcontent/images/product2.jpg"/>
+                    <div class="productName">Ghế DXRacer King KF06-NW</div>
+                    <div class="productPrice">8,880,000 đ</div>
+                </div>
+                <div class="gridProductItem">
+                    <img class="productThumbnail" src="webcontent/images/product1.jpg"/>
+                    <div class="productName">Ghế DXRacer King KF06-NW</div>
+                    <div class="productPrice">8,880,000 đ</div>
+                </div>
+                <div class="gridProductItem">
+                    <img class="productThumbnail"src="webcontent/images/product2.jpg"/>
+                    <div class="productName">Ghế DXRacer King KF06-NW</div>
+                    <div class="productPrice">8,880,000 đ</div>
+                </div>
+            </div>      
+
         </div>
 
 
