Using xslt to present trending product in home page

--- a/web/header.html
+++ b/web/header.html
@@ -2,7 +2,9 @@
 <div class="header">
     <div class="topFragment">
         <div class="logoBlock">
-            <img src="webcontent/images/logo.png">
+            <a href="ProcessServlet">
+                <img src="webcontent/images/logo.png">
+            </a>
         </div>
         <div class="searchBlock">
             <div class="search">
