implement shopping cart

--- a/web/demo.html
+++ b/web/demo.html
@@ -40,11 +40,15 @@
                     <img class="productThumbnail" src="webcontent/images/product1.jpg"/>
                     <div class="productName">Ghế DXRacer King KF06-NW</div>
                     <div class="productPrice">8,880,000 đ</div>
+                    <div class="layerBlur"></div>
+                    <div class="layerCart">
+                        <button class="btnAddToCart">Add to cart</button>
+                    </div>
                 </div>
                 <div class="gridProductItem">
                     <img class="productThumbnail" src="webcontent/images/product2.jpg"/>
                     <div class="productName">Ghế DXRacer King KF06-NW</div>
-                    <div class="productPrice">8,880,000 đ</div>
+                    <div class="productPrice">8,880,000 đ</div>                    
                 </div>
                 <div class="gridProductItem">
                     <img class="productThumbnail" src="webcontent/images/product1.jpg"/>
