Create font end for login, register

--- a/web/footer.html
+++ b/web/footer.html
@@ -1,7 +1,7 @@
 <div class="footer">
     <footer>
         <div class="copyright">
-            <p>&copy 2018 - NTP Gmaing Gear</p>
+            <p>&copy 2018 - NTP Gaming Gear</p>
         </div>
         <div class="social">
             <a href="#" class="support">Contact Us</a>
